Set intersection update

--- a/Exercise_3/set_intersection_ex3.ipynb
+++ b/Exercise_3/set_intersection_ex3.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0cd2e025",
+   "execution_count": 3,
+   "id": "8ba37fbc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3}\n"
+     ]
+    }
+   ],
    "source": [
     "#Function to find intersection of two sets\n",
     "def set_intersection(s1, s2):\n",
-    "    return s1.intersetion(s2)\n",
+    "    return s1.intersection(s2)\n",
     "\n",
-    "print(set_intersectio({1,2,3}, ))"
+    "print(set_intersection({1,2,3,4}, {3,4,5,6}))"
    ]
   }
  ],
