--- a/Exercise_2/remove_duplicates_ex2.ipynb
+++ b/Exercise_2/remove_duplicates_ex2.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f64b6ff8",
+   "execution_count": 1,
+   "id": "cdd58bb9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7]\n"
+     ]
+    }
+   ],
    "source": [
     "#Function to remove duplicates in a list\n",
     "def remove_duplicates(ls):\n",
@@ -15,8 +23,16 @@
     "            new_list.append(i)\n",
     "    return new_list\n",
     "\n",
-    "print(remove_duplicates([1, 1, 2, 2, 3, 4]))"
+    "print(remove_duplicates([1, 1, 2, 2, 3, 4, 5, 5, 6, 6, 7, 7]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ff18be1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
